--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,58 @@
-<p style = "text-align: center">
-   MENU PLACEMENT
-</p>
+
+<ul class = "list-group row">
+  <li class = "list-group-item text-center">
+      <h5>Baby Berk 1 Menu</h5>
+  </li>
+
+    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List group item heading</h5>
+          <small>3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </li>
+      <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">List group item heading</h5>
+            <small>3 days ago</small>
+          </div>
+          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+          <small>Donec id elit non mi porta.</small>
+        </li>
+        <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1">List group item heading</h5>
+              <small>3 days ago</small>
+            </div>
+            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+            <small>Donec id elit non mi porta.</small>
+          </li>
+          <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+              <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small>3 days ago</small>
+              </div>
+              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              <small>Donec id elit non mi porta.</small>
+            </li>
+            <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+                <div class="d-flex w-100 justify-content-between">
+                  <h5 class="mb-1">List group item heading</h5>
+                  <small>3 days ago</small>
+                </div>
+                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <small>Donec id elit non mi porta.</small>
+              </li>
+              <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small>3 days ago</small>
+                  </div>
+                  <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                  <small>Donec id elit non mi porta.</small>
+                </li>
+
+
+
+</ul>
