--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,3 @@
-<div style = "text-align: center">
-   Baby Berk
-   <!-- <agm-map [latitude]="lat" [longitude]="lng" [zoom] = 17>
-     <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-  </agm-map> -->
-</div>
+ <agm-map [latitude]="lat" [longitude]="lng" [zoom] = 17>
+   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
