--- a/src/app/twitter/twitter.component.html
+++ b/src/app/twitter/twitter.component.html
@@ -1,3 +1,1 @@
-<p style = "text-align: center">
-   TWITTER PLACEMENT
-</p>
+<a class="twitter-timeline" data-height= "600" href="https://twitter.com/UMassBabyBerk">Tweets by UMassBabyBerk</a>
