--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,58 +1,117 @@
-
-<ul class = "list-group row">
-  <li class = "list-group-item text-center">
-      <h5>Baby Berk 1 Menu</h5>
+<ul *ngIf="babyOne" class="list-group row">
+  <li class="list-group-item text-center">
+    <h3>Baby Berk 1 Menu</h3>
   </li>
 
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">List group item heading</h5>
-          <small>3 days ago</small>
-        </div>
-        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        <small>Donec id elit non mi porta.</small>
-      </li>
-      <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-            <small>3 days ago</small>
-          </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          <small>Donec id elit non mi porta.</small>
-        </li>
-        <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">List group item heading</h5>
-              <small>3 days ago</small>
-            </div>
-            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            <small>Donec id elit non mi porta.</small>
-          </li>
-          <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1">List group item heading</h5>
-                <small>3 days ago</small>
-              </div>
-              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-              <small>Donec id elit non mi porta.</small>
-            </li>
-            <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">List group item heading</h5>
-                  <small>3 days ago</small>
-                </div>
-                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                <small>Donec id elit non mi porta.</small>
-              </li>
-              <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">List group item heading</h5>
-                    <small>3 days ago</small>
-                  </div>
-                  <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  <small>Donec id elit non mi porta.</small>
-                </li>
 
 
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Burgers</h5><small>Substitute a Vegan Black Bean Burger Patty / Grilled Antibiotic Free Chicken Breast at No Charge.</small>
+      <small> Sprouted Whole Wheat and Gluten Free Burger Buns +$1.00</small> </div>
+  </li>
 
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Sides</h5>
+      <small>3 days ago</small>
+    </div>
+  </li>
+
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">BabyBerk Burger</h5>
+      <small>$7.50</small>
+    </div>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Local Cheddar Cheese, Sliced Fresh Avocado, Applewood Smoked Bacon, Local Leaf Lettuce, Sliced Tomato and Salsa on a Grilled Whole Wheat Bun. </p>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+</ul>
+
+
+<ul *ngIf="!babyOne" class="list-group row">
+  <li class="list-group-item text-center">
+    <h3>Baby Berk 2 Menu</h3>
+  </li>
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small>3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small>Donec id elit non mi porta.</small>
+  </li>
 </ul>
