--- a/src/app/twitter/twitter.component.html
+++ b/src/app/twitter/twitter.component.html
@@ -1,1 +1,7 @@
-<a class="twitter-timeline" data-height= "600" href="https://twitter.com/UMassBabyBerk">Tweets by UMassBabyBerk</a>
+<div  [hidden] = "babyOne">
+  <a class="twitter-timeline" data-height= "600" href="https://twitter.com/UMassBabyBerk">Tweets by UMassBabyBerk</a>
+</div>
+<div [hidden] = "!babyOne">
+  
+<a class="twitter-timeline" data-height = "600" href="https://twitter.com/UMassBabyBerk2">Tweets by UMassBabyBerk2</a>
+</div>
