--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,11 @@
 
 #all {
-  background-color: #E0F7FA;
+  background-color: #FFFFFF;
 }
 
 
 .jumbotron {
-    background-color: #FFFFFF;
+    background-color: #add8e6;
     padding: 0.25em 0.25em;
 }
 
