--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,117 +1,341 @@
-<ul *ngIf="babyOne" class="list-group row">
-  <li class="list-group-item text-center">
-    <h3>Baby Berk 1 Menu</h3>
-  </li>
+<div *ngIf = "babyOne">
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h3>Baby Berk 1 Menu</h3>
+      </li>
+    </ul>
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h5 id = "types">BURGERS</h5>
+      </li>
+    </ul>
 
-
-
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Burgers</h5><small>Substitute a Vegan Black Bean Burger Patty / Grilled Antibiotic Free Chicken Breast at No Charge.</small>
-      <small> Sprouted Whole Wheat and Gluten Free Burger Buns +$1.00</small> </div>
-  </li>
-
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Sides</h5>
-      <small>3 days ago</small>
-    </div>
-  </li>
-
-
+<ul class = "list-group row">
   <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
     <div class="d-flex w-100 justify-content-between">
       <h5 class="mb-1">BabyBerk Burger</h5>
       <small>$7.50</small>
     </div>
-    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Local Cheddar Cheese, Sliced Fresh Avocado, Applewood Smoked Bacon, Local Leaf Lettuce, Sliced Tomato and Salsa on a Grilled Whole Wheat Bun. </p>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Cheddar Cheese, Sliced Fresh Avocado, Applewood Smoked Bacon, Leaf Lettuce, Sliced Tomato and Salsa on a Grilled Whole Wheat Bun.</p>
   </li>
+
+
   <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
+      <h5 class="mb-1">Grass Fed All-Natural Beef Burger</h5>
+      <small>$5.00</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
+    <p class="mb-1">Grass Fed All-Natural 100% Beef Burger* served on a grilled Whole Wheat Bun with Cheese. Lettuce and Tomato.</p>
   </li>
+
+
   <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
+      <h5 class="mb-1">Hampshire Burger</h5>
+      <small>$7.00</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Local Cheddar Cheese, Freshly Cracked Fried Egg, Applewood Smoked Bacon and our Signature Garlic Aioli on a Grilled Whole Wheat Bun.</p>
   </li>
+
+
   <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
+      <h5 class="mb-1">Bluewall Mediterranean Burger</h5>
+      <small>$7.00</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Feta Cheese, Housemade Tapenade, Arugula, Roasted Local Tomatoes and our Signature Garlic Aioli on a Grilled Whole What Bun.
+</p>
   </li>
+
+
   <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
+      <h5 class="mb-1">Vegan Franklin Burger (Vegan)</h5>
+      <small>$6.50</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
+    <p class="mb-1">Black Bean Vegan Burger Patty, Sliced Fresh Avocado, Fresh Cilantro, Fresh Roasted Corn Salsa, Arugula and Housemade Vegan Mayo on a Grilled Whole Wheat Bun.
+</p>
   </li>
+
+    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Hampden Spicy Chicken Sandwich</h5>
+        <small>$7.00</small>
+      </div>
+      <p class="mb-1">100% Antibiotic-Free White Meat Chicken, Breaded and Fried, topped with House Made Gochujang spicy BBQ Sauce, Kimchi Slaw, Fresh Cilantro, Local-Leaf Lettuce and Sliced Tomato on a Grilled Whole Wheat Bun.</p>
+    </li>
+  </ul>
+
+
+<ul class="list-group row text-center">
+<li class="list-group-item">
+  <h5 id = "types">POUTINE</h5>
+</li>
 </ul>
 
+<ul class = "list-group row">
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">Classic Poutine</h5>
+    <small>$5.00</small>
+  </div>
+  <p class="mb-1">Crispy Natural Cut French Fries and Fresh Cheese Curds covered in Beef Gravy</p>
+</li>
 
-<ul *ngIf="!babyOne" class="list-group row">
-  <li class="list-group-item text-center">
-    <h3>Baby Berk 2 Menu</h3>
-  </li>
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">Steak Poutine</h5>
+    <small>$8.00</small>
+  </div>
+  <p class="mb-1">Crispy Natural Cut French Fries topped with Sirloin Steak, Fresh Cheese Curds and Dill Pickles covered in Beef Gravy.</p>
+</li>
 
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
-  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small>3 days ago</small>
-    </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small>Donec id elit non mi porta.</small>
-  </li>
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">BBQ Pork Poutine</h5>
+    <small>$8.00</small>
+  </div>
+  <p class="mb-1">Crispy Sweet Potato Fries, Pulled Pork, Shredded Jack Cheese, Scallions, and BBQ sauce.</p>
+</li>
 </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5 id = "types">ADD-ONS</h5>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Extra Burger Patty</h5>
+      <small>$2.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Sliced Fresh Avocado</h5>
+        <small>$1.00</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Applewood Smoked Bacon</h5>
+        <small>$1.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Roasted Tomatoes</h5>
+        <small>$0.75</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Caramelized Onions</h5>
+        <small>$0.75</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5 id = "types">SIDES</h5>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Natural Cut French Fries</h5>
+      <small>$3.00</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Sweet Potato Fries</h5>
+        <small>$3.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Onion Rings</h5>
+        <small>$3.50</small>
+    </li>
+  </ul>
+</div>
+
+<!---BABY TWO --->
+
+<div *ngIf = "!babyOne">
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h3>Baby Berk 2 Menu</h3>
+      </li>
+    </ul>
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h5 id = "types">BURGERS</h5>
+      </li>
+    </ul>
+
+<ul class = "list-group row">
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">BabyBerk Burger</h5>
+      <small>$7.50</small>
+    </div>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Cheddar Cheese, Sliced Fresh Avocado, Applewood Smoked Bacon, Leaf Lettuce, Sliced Tomato and Salsa on a Grilled Whole Wheat Bun.</p>
+  </li>
+
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Grass Fed All-Natural Beef Burger</h5>
+      <small>$5.00</small>
+    </div>
+    <p class="mb-1">Grass Fed All-Natural 100% Beef Burger* served on a grilled Whole Wheat Bun with Cheese. Lettuce and Tomato.</p>
+  </li>
+
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Hampshire Burger</h5>
+      <small>$7.00</small>
+    </div>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Local Cheddar Cheese, Freshly Cracked Fried Egg, Applewood Smoked Bacon and our Signature Garlic Aioli on a Grilled Whole Wheat Bun.</p>
+  </li>
+
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Bluewall Mediterranean Burger</h5>
+      <small>$7.00</small>
+    </div>
+    <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Feta Cheese, Housemade Tapenade, Arugula, Roasted Local Tomatoes and our Signature Garlic Aioli on a Grilled Whole What Bun.
+</p>
+  </li>
+
+
+  <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Vegan Franklin Burger (Vegan)</h5>
+      <small>$6.50</small>
+    </div>
+    <p class="mb-1">Black Bean Vegan Burger Patty, Sliced Fresh Avocado, Fresh Cilantro, Fresh Roasted Corn Salsa, Arugula and Housemade Vegan Mayo on a Grilled Whole Wheat Bun.
+</p>
+  </li>
+
+    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Hampden Spicy Chicken Sandwich</h5>
+        <small>$7.00</small>
+      </div>
+      <p class="mb-1">100% Antibiotic-Free White Meat Chicken, Breaded and Fried, topped with House Made Gochujang spicy BBQ Sauce, Kimchi Slaw, Fresh Cilantro, Local-Leaf Lettuce and Sliced Tomato on a Grilled Whole Wheat Bun.</p>
+    </li>
+  </ul>
+
+
+<ul class="list-group row text-center">
+<li class="list-group-item">
+  <h5 id = "types">POUTINE</h5>
+</li>
+</ul>
+
+<ul class = "list-group row">
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">Classic Poutine</h5>
+    <small>$5.00</small>
+  </div>
+  <p class="mb-1">Crispy Natural Cut French Fries and Fresh Cheese Curds covered in Beef Gravy</p>
+</li>
+
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">Steak Poutine</h5>
+    <small>$8.00</small>
+  </div>
+  <p class="mb-1">Crispy Natural Cut French Fries topped with Sirloin Steak, Fresh Cheese Curds and Dill Pickles covered in Beef Gravy.</p>
+</li>
+
+<li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <div class="d-flex w-100 justify-content-between">
+    <h5 class="mb-1">BBQ Pork Poutine</h5>
+    <small>$8.00</small>
+  </div>
+  <p class="mb-1">Crispy Sweet Potato Fries, Pulled Pork, Shredded Jack Cheese, Scallions, and BBQ sauce.</p>
+</li>
+</ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5 id = "types">ADD-ONS</h5>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Extra Burger Patty</h5>
+      <small>$2.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Sliced Fresh Avocado</h5>
+        <small>$1.00</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Applewood Smoked Bacon</h5>
+        <small>$1.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Roasted Tomatoes</h5>
+        <small>$0.75</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Caramelized Onions</h5>
+        <small>$0.75</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5 id = "types">SIDES</h5>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Natural Cut French Fries</h5>
+      <small>$3.00</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Sweet Potato Fries</h5>
+        <small>$3.50</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Onion Rings</h5>
+        <small>$3.50</small>
+    </li>
+  </ul>
+</div>
