--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,14 +22,14 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-2">
-      <div class="panel panel-default">
-        <app-twitter [babyOne] = "babyOne"></app-twitter>
-      </div>
-    </div>
     <div class="col-md-10">
       <div class="panel panel-default">
         <app-map [babyOne] = "babyOne"></app-map>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="panel panel-default">
+        <app-twitter [babyOne] = "babyOne"></app-twitter>
       </div>
     </div>
   </div>
@@ -42,3 +42,10 @@
   </div>
 </div>
 </div>
+
+
+<footer class="footer">
+   <div class="container text-center">
+     <p class="text-muted">@Copyright Phillip Michalowski</p>
+   </div>
+ </footer>
