--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,14 @@
   </div>
 </nav> -->
 <div id = "all">
-<div class="jumbotron jumbotron-fluid">
-  <div class="container text-center">
-    <h1 class="display-3">Where's My Baby?</h1>
-    <p class="lead">The UMass Baby Berk Food Truck Tracker.</p>
-<div id = "btn"> <button class = "btn" (click) = "swapBabies()">Swap Babies</button>
-</div>
-</div>
-</div>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container text-center">
+      <h1 class="display-3">Where's My Baby<img src = "../assets/baby.jpg" /></h1>
+      <p class="lead">The UMass <strong>Baby Berk {{num}} </strong>Food Truck Tracker</p>
+      <div id = "btn"> <button class = "btn" (click) = "swapBabies()">Swap Babies</button>
+      </div>
+    </div>
+  </div>
 
 <div class="container">
   <div class="row">
@@ -44,8 +44,8 @@
 </div>
 
 
-<footer class="footer">
-   <div class="container text-center">
-     <p class="text-muted">@Copyright Phillip Michalowski</p>
+<footer>
+   <div class="text-center">
+     <p>@Copyright Phillip Michalowski</p>
    </div>
  </footer>
