--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,3 @@
- <agm-map [latitude]="lat" [longitude]="lng" [zoom] = 17>
+ <agm-map [latitude]="lat" [maxZoom] = 19  [minZoom] = 15 [longitude]="lng" [zoom] = 17>
    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 </agm-map>
