--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,7 @@
+
+
 <!--BABY ONE -->
-<div *ngIf="babyOne">
+<div *ngIf="!babyOne">
   <ul class="list-group row text-center">
     <li class="list-group-item">
       <h3>Baby Berk 1 Menu</h3>
@@ -173,148 +175,114 @@
 </div>
 
 <!---BABY TWO --->
-<div *ngIf="!babyOne">
+<div *ngIf="babyOne">
   <ul class="list-group row text-center">
     <li class="list-group-item">
       <h3>Baby Berk 2 Menu</h3>
     </li>
   </ul>
+
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5 id="types">BURGERS</h5>
+      <h5 id="types">QUESADILLAS</h5>
     </li>
   </ul>
 
-  <ul class="list-group row">
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">BabyBerk Burger</h5>
-        <small>$7.50</small>
-      </div>
-      <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Cheddar Cheese, Sliced Fresh Avocado, Applewood Smoked Bacon, Leaf Lettuce, Sliced Tomato and Salsa on a Grilled Whole Wheat Bun.</p>
-    </li>
-
-
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Grass Fed All-Natural Beef Burger</h5>
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
+        <h5 class="mb-1">Classic Cheese Quessadilla</h5>
         <small>$5.00</small>
-      </div>
-      <p class="mb-1">Grass Fed All-Natural 100% Beef Burger* served on a grilled Whole Wheat Bun with Cheese. Lettuce and Tomato.</p>
+      <p class="mb-1">A Grilled 10" Flour Tortilla, Filled with a blend of Cheddar and Monterey Jack Cheeses. Served with Salsa & Sour Cream</p>
     </li>
   </ul>
 
-  <ul class="list-group row">
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Hampshire Burger</h5>
-        <small>$7.00</small>
-      </div>
-      <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Local Cheddar Cheese, Freshly Cracked Fried Egg, Applewood Smoked Bacon and our Signature Garlic Aioli on a Grilled Whole Wheat Bun.</p>
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5 id="types">SPECIALTY QUESADILLAS</h5>
+      <p class="mb-1">All served on a grilled 10" Flour Tortilla, and filled with a blend of Cheddar and Monterey Jack Cheeses
+        *Make any Quesadilla a Melt on Fresh UMass Bakeshop Italian Bread at no additional cost (sandwiches may contain egg)</p>
     </li>
+  </ul>
 
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
+        <h5 class="mb-1">BB2 BBQ Quesadilla</h5>
+        <small>$6.25</small>
+      <p class="mb-1">BBQ Pulled Pork, House-made Mac & Cheese and Caramelized Onions</p>
+    </li>
+  </ul>
 
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Bluewall Mediterranean Burger</h5>
-        <small>$7.00</small>
+        <h5 class="mb-1">Hampshire Quesadilla</h5>
+        <small>$6.75</small>
       </div>
-      <p class="mb-1">Grass-Fed All-Natural 100% Beef Burger, Feta Cheese, Housemade Tapenade, Arugula, Roasted Local Tomatoes and our Signature Garlic Aioli on a Grilled Whole What Bun.
+      <p class="mb-1">Sliced Prime Rib, A Fresh Cracked Fried Egg, Applewood Smoked Bacon and a side of Garlic Aioli</p>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
+        <h5 class="mb-1">Huevos Rancheros</h5>
+        <small>$6.25</small>
+      <p class="mb-1">Spicy Chorizo, A Fresh Cracked Fried Egg, Black Beans, Guacamole and a side of Salsa</p>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
+        <h5 class="mb-1">Korean Spicy Chicken</h5>
+        <small>$6.00</small>
+      <p class="mb-1">Sweet and Spicy Korean Fried Chicken, Scallions, Kimchi and Tater Tots</p>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
+      <div class="d-flex w-100 justify-content-between">
+        <h5 class="mb-1">Thai BBQ Chicken Quesadilla</h5>
+        <small>$6.25</small>
+      </div>
+      <p class="mb-1">Coconut Curry Thai BBQ Chicken, Shredded Carrots and Broccoli Crowns with Sweet Piquanté Peppers
       </p>
     </li>
   </ul>
 
-  <ul class="list-group row">
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
+  <ul class="list-group row text-center">
+    <li class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Vegan Franklin Burger (Vegan)</h5>
-        <small>$6.50</small>
+        <h5 class="mb-1">Poutine Quesadilla</h5>
+        <small>$6.25</small>
       </div>
-      <p class="mb-1">Black Bean Vegan Burger Patty, Sliced Fresh Avocado, Fresh Cilantro, Fresh Roasted Corn Salsa, Arugula and Housemade Vegan Mayo on a Grilled Whole Wheat Bun.
-      </p>
-    </li>
-
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Hampden Spicy Chicken Sandwich</h5>
-        <small>$7.00</small>
-      </div>
-      <p class="mb-1">100% Antibiotic-Free White Meat Chicken, Breaded and Fried, topped with House Made Gochujang spicy BBQ Sauce, Kimchi Slaw, Fresh Cilantro, Local-Leaf Lettuce and Sliced Tomato on a Grilled Whole Wheat Bun.</p>
+      <p class="mb-1">Sliced Prime Rib, Dill Pickles, Tater Tots and a side of Beef Gravy</p>
     </li>
   </ul>
 
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5 id="types">POUTINE</h5>
-    </li>
-  </ul>
-
-  <ul class="list-group row">
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Classic Poutine</h5>
-        <small>$5.00</small>
-      </div>
-      <p class="mb-1">Crispy Natural Cut French Fries and Fresh Cheese Curds covered in Beef Gravy</p>
-    </li>
-
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start col-xs-6">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Steak Poutine</h5>
-        <small>$8.00</small>
-      </div>
-      <p class="mb-1">Crispy Natural Cut French Fries topped with Sirloin Steak, Fresh Cheese Curds and Dill Pickles covered in Beef Gravy.</p>
-    </li>
-  </ul>
-
-  <ul class="list-group row">
-    <li href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-      <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">BBQ Pork Poutine</h5>
-        <small>$8.00</small>
-      </div>
-      <p class="mb-1">Crispy Sweet Potato Fries, Pulled Pork, Shredded Jack Cheese, Scallions, and BBQ sauce.</p>
+      <h5 id="types">SNACKS</h5>
     </li>
   </ul>
 
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5 id="types">ADD-ONS</h5>
-    </li>
-  </ul>
-
-  <ul class="list-group row text-center">
-    <li class="list-group-item">
-      <h5>Extra Burger Patty</h5>
-      <small>$2.50</small>
-    </li>
-  </ul>
-
-  <ul class="list-group row text-center">
-    <li class="list-group-item">
-      <h5>Sliced Fresh Avocado</h5>
-      <small>$1.00</small>
-    </li>
-  </ul>
-
-  <ul class="list-group row text-center">
-    <li class="list-group-item">
-      <h5>Applewood Smoked Bacon</h5>
+      <h5>Deep River Chips</h5>
       <small>$1.50</small>
     </li>
   </ul>
 
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5>Roasted Tomatoes</h5>
-      <small>$0.75</small>
+      <h5>UMass Bakeshop Cookies</h5>
+      <small>$1.50</small>
     </li>
   </ul>
 
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5>Caramelized Onions</h5>
-      <small>$0.75</small>
+      <h5>Fresh Fruit</h5>
+      <small>$1.25</small>
     </li>
   </ul>
 
@@ -326,7 +294,14 @@
 
   <ul class="list-group row text-center">
     <li class="list-group-item">
-      <h5>Natural Cut French Fries</h5>
+      <h5>Tater Tots</h5>
+      <small>$3.00</small>
+    </li>
+  </ul>
+
+  <ul class="list-group row text-center">
+    <li class="list-group-item">
+      <h5>Natural Cut Fries</h5>
       <small>$3.00</small>
     </li>
   </ul>
@@ -338,10 +313,52 @@
     </li>
   </ul>
 
-  <ul class="list-group row text-center">
-    <li class="list-group-item">
-      <h5>Onion Rings</h5>
-      <small>$3.50</small>
-    </li>
-  </ul>
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h5 id="types">BEVERAGES</h5>
+      </li>
+    </ul>
+
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h5>SODA</h5>
+        <small>$1.25</small>
+      </li>
+    </ul>
+
+    <ul class="list-group row text-center">
+      <li class="list-group-item">
+        <h5>WATER</h5>
+        <small>$2.00</small>
+      </li>
+    </ul>
+
 </div>
+
+<ul class="list-group row text-center">
+  <li class="list-group-item list-group-item-action flex-column align-items-start">
+    <h5 class="mb-1">Hours</h5>
+    <p class="mb-1" *ngIf = "!babyOne"><strong>Monday - Wednesday:</strong>
+      12:00 PM - 11:59 PM
+
+      <strong>Thursday:</strong>
+      12:00 PM - 2:00 AM
+
+      <strong>Friday:</strong>
+      12:00 PM - 4:00 AM
+
+      <strong>Saturday</strong>
+      10:00 PM - 4:00 AM</p>
+    <p class="mb-1" *ngIf = "babyOne"><strong>Monday - Wednesday:</strong>
+      12:00 PM - 11:59 PM
+
+      <strong>Thursday:</strong>
+      12:00 PM - 2:00 AM
+
+      <strong>Friday:</strong>
+      12:00 PM - 4:00 AM
+
+      <strong>Saturday:</strong>
+      10:00 PM - 4:00 AM</p>
+  </li>
+</ul>
